Project/css/card.css
.card {
  margin: 0;
  padding: 0;
  width: 70%;
  height: 70%;
}

.header {
  height: 35%;
  background-color: white;
  border-bottom: solid;
  border-color: grey;
}
.navbar {
  background-color: black;
  height: 3em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: .25em;
}

.ewu {
  color: #a10022;
  font-size: 35pt;
  height: 80%;
}
.joketitle {
  color: black;
  font-size: 25pt;
}

.container {
  margin-top: 10px;
  border: solid;
  height: 65%;
  border-radius: 50px;
}
.body {
  height: 80%;
  border-bottom: solid;
}
.ajoke {
  background-color: lightgrey;
  border-top-left-radius: 50px ;
  border-top-right-radius: 50px ;
  padding-left: 20px;
  font-size: 15pt;
  display: flex;
  align-items: center;
  height: 30%;
}
.ajoke h1 {
  padding: 0;
  margin: 0;
}
.footer {
  display: flex;
  align-items: center;
  height: 19%;

}
.anotherjoke {
  background: linear-gradient(90deg, rgba(50,47,108,1) 0%, rgba(3,144,142,1) 0%, rgba(23,167,212,1) 50%, rgba(25,141,228,1) 100%);
  height: 40px;
  width: 100px;
  margin: 20px 5px 20px 25px;
}
.anotherapi {
  background-color: lightgrey;
  height: 40px;
  width: 100px;
  border-radius: 5px;
}
.telljoke {
  height: 70%;
  display: flex;
  align-items: center;
  padding-left: 10px;
  font-size: x-large;
}
button {
  border:none;
  background-color:transparent;
  outline:none;
}
button:hover, .anotherapi:hover, .anotherjoke:hover {
  color: #a10022;
}

.dropdown {
  position: relative;
  height: 75%;
  padding: 0;
  margin: 0;

 
}
.menu{
  color: white;
  font-size: 30pt;
  padding-right: 5px;
  

}
#drop p {

  border: solid;
  border-top-color: gray;
  border-right-color: black;
  border-bottom-color: black;
  border-left-color: gray;
  background: linear-gradient(90deg, rgba(50,47,108,1) 0%, rgba(3,144,142,1) 0%, rgba(23,167,212,1) 50%, rgba(25,141,228,1) 100%);
  /*display: block;
  height: 2.2em;
  width: 90%;
  margin-left: 4%;*/
  display: flex;
  height: 2.2em;
  width: 90%;
  
  border-radius: .5em;
  color: white;
  font-family: sans-serif;
  justify-content: center;
  align-items: center; 
  
}

#drop {
  position: absolute;
  background-color: white;
  border: solid;
  width: 200%;
  height: 15em;
  margin: 0em;
  padding: 0;
  right: 0;
  display: block;
  align-items: center;
 
}
.hidden {
  display: none;
}

